Fix collapsed dialog in IIE11
- Also some tweaks to the new logo and login page look in general.

--- a/src/RX.Nyss.Web/ClientApp/src/components/feedback/FeedbackDialog.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/feedback/FeedbackDialog.module.scss
@@ -1,10 +1,18 @@
-.thankYouMessage {
-  font-size: 22px !important;
-  font-weight: 600 !important;
-  margin: 20px;
-  margin-bottom: 40px;
+.feedbackContent {
+  width: 540px;
+  padding-bottom: 25px;
 
   @media screen and (max-width: 1280px) {
-    font-size: 16px !important;
+    width: unset;
+  }
+
+  .thankYouMessage {
+    font-size: 22px !important;
+    font-weight: 600 !important;
+    margin-bottom: 30px !important;
+
+    @media screen and (max-width: 1280px) {
+      font-size: 16px !important;
+    }
   }
 }
